errors.txt
Syntax error in .\sample_submission.py: Sorry: IndentationError: unexpected indent (sample_submission.py, line 29)
Syntax error in .\sample_submission.py: Sorry: IndentationError: unexpected indent (sample_submission.py, line 59)
Syntax error in .\sample_submission.py:   File ".\sample_submission.py", line 62
    data = output(x,y,z,,a,b,c,d,)
                        ^
SyntaxError: invalid syntax

Syntax error in sample_submission.py:   File "sample_submission.py", line 38
    lines..append([4,5])
          ^
SyntaxError: invalid syntax

Syntax error in sample_submission.py:   File "sample_submission.py", line 38
    lines..append([4,5])
          ^
SyntaxError: invalid syntax

Syntax error in mean_std.py:   File "mean_std.py", line 35
    for col_idx in range(num_columns)):
                                     ^
SyntaxError: unmatched ')'

Syntax error in mean_std.py:   File "mean_std.py", line 35
    for col_idx in range(num_columns)):
                                     ^
SyntaxError: unmatched ')'

Syntax error in mean_std.py:   File "mean_std.py", line 35
    for col_idx in range(num_columns)):
                                     ^
SyntaxError: unmatched ')'

Syntax error in mean_std.py:   File "mean_std.py", line 35
    for col_idx in range(num_columns)):
                                     ^
SyntaxError: unmatched ')'

Syntax error in mean_std.py:   File "mean_std.py", line 34
    for col_idx in range(num_columns)):
                                     ^
SyntaxError: unmatched ')'

Syntax error in mean_std.py:   File "mean_std.py", line 34
    for col_idx in range(num_columns)):
                                     ^
SyntaxError: unmatched ')'

